[package]
name = "microfetch-archlinux"
version = "0.4.8"
edition = "2024"

[dependencies]
libc = "0.2"
lazy_static = "1.5"
nix = { version = "0.30", features = ["fs", "hostname", "feature"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "microfetch"
path = "src/main.rs"

[lib]
name = "microfetch_lib"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

[profile.dev]
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.release]
lto = true
strip = true
debug = false
opt-level = 3
panic = "abort"
codegen-units = 1
